exports[`no-typeof-undefined > invalid(1): declare const foo: unknown; function bar(foo: unknown) { return typeof (foo as unknown) === \"undefined\"; } 1`] = `

Options:
- checkGlobalVariables: true

Code:
  1 | declare const foo: unknown; function bar(foo: unknown) { return typeof (foo as unknown) === "undefined"; }

`;

exports[`no-typeof-undefined > invalid(1): declare const foo: unknown; function bar(foo: unknown) { return typeof (foo as unknown) === \"undefined\"; } 2`] = `

Message:
> 1 | declare const foo: unknown; function bar(foo: unknown) { return typeof (foo as unknown) === "undefined"; }
    |                                                                 ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | declare const foo: unknown; function bar(foo: unknown) { return (foo as unknown) === undefined; }

`;

exports[`no-typeof-undefined > invalid(1): typeof a.b === \"undefined\" 1`] = `

  1 | typeof a.b === "undefined"

`;

exports[`no-typeof-undefined > invalid(1): typeof a.b === \"undefined\" 2`] = `

Message:
> 1 | typeof a.b === "undefined"
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | a.b === undefined

`;

exports[`no-typeof-undefined > invalid(1): typeof undefinedVariableIdentifier === \"undefined\" 1`] = `

Options:
- checkGlobalVariables: true

Code:
  1 | typeof undefinedVariableIdentifier === "undefined"

`;

exports[`no-typeof-undefined > invalid(1): typeof undefinedVariableIdentifier === \"undefined\" 2`] = `

Message:
> 1 | typeof undefinedVariableIdentifier === "undefined"
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Suggestion 1/1: Switch to \`… === undefined\`.:
  1 | undefinedVariableIdentifier === undefined

`;

exports[`no-typeof-undefined > invalid(10): for (const foo of bar) typeof foo === \"undefined\"; 1`] = `

  1 | for (const foo of bar) typeof foo === "undefined";

`;

exports[`no-typeof-undefined > invalid(10): for (const foo of bar) typeof foo === \"undefined\"; 2`] = `

Message:
> 1 | for (const foo of bar) typeof foo === "undefined";
    |                        ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | for (const foo of bar) foo === undefined;

`;

exports[`no-typeof-undefined > invalid(11): let foo;\nfunction bar() {\n\ttypeof foo === \"undefined\";\n} 1`] = `

  1 | let foo;
  2 | function bar() {
  3 | 	typeof foo === "undefined";
  4 | }

`;

exports[`no-typeof-undefined > invalid(11): let foo;\nfunction bar() {\n\ttypeof foo === \"undefined\";\n} 2`] = `

Message:
  1 | let foo;
  2 | function bar() {
> 3 | 	typeof foo === "undefined";
    | 	^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.
  4 | }

Output:
  1 | let foo;
  2 | function bar() {
  3 | 	foo === undefined;
  4 | }

`;

exports[`no-typeof-undefined > invalid(12): function foo() {typeof foo === \"undefined\"} 1`] = `

  1 | function foo() {typeof foo === "undefined"}

`;

exports[`no-typeof-undefined > invalid(12): function foo() {typeof foo === \"undefined\"} 2`] = `

Message:
> 1 | function foo() {typeof foo === "undefined"}
    |                 ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | function foo() {foo === undefined}

`;

exports[`no-typeof-undefined > invalid(13): function foo(bar) {typeof bar === \"undefined\"} 1`] = `

  1 | function foo(bar) {typeof bar === "undefined"}

`;

exports[`no-typeof-undefined > invalid(13): function foo(bar) {typeof bar === \"undefined\"} 2`] = `

Message:
> 1 | function foo(bar) {typeof bar === "undefined"}
    |                    ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | function foo(bar) {bar === undefined}

`;

exports[`no-typeof-undefined > invalid(14): function foo({bar}) {typeof bar === \"undefined\"} 1`] = `

  1 | function foo({bar}) {typeof bar === "undefined"}

`;

exports[`no-typeof-undefined > invalid(14): function foo({bar}) {typeof bar === \"undefined\"} 2`] = `

Message:
> 1 | function foo({bar}) {typeof bar === "undefined"}
    |                      ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | function foo({bar}) {bar === undefined}

`;

exports[`no-typeof-undefined > invalid(15): function foo([bar]) {typeof bar === \"undefined\"} 1`] = `

  1 | function foo([bar]) {typeof bar === "undefined"}

`;

exports[`no-typeof-undefined > invalid(15): function foo([bar]) {typeof bar === \"undefined\"} 2`] = `

Message:
> 1 | function foo([bar]) {typeof bar === "undefined"}
    |                      ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | function foo([bar]) {bar === undefined}

`;

exports[`no-typeof-undefined > invalid(16): typeof foo.bar === \"undefined\" 1`] = `

  1 | typeof foo.bar === "undefined"

`;

exports[`no-typeof-undefined > invalid(16): typeof foo.bar === \"undefined\" 2`] = `

Message:
> 1 | typeof foo.bar === "undefined"
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | foo.bar === undefined

`;

exports[`no-typeof-undefined > invalid(17): import foo from 'foo';\ntypeof foo.bar === \"undefined\" 1`] = `

  1 | import foo from 'foo';
  2 | typeof foo.bar === "undefined"

`;

exports[`no-typeof-undefined > invalid(17): import foo from 'foo';\ntypeof foo.bar === \"undefined\" 2`] = `

Message:
  1 | import foo from 'foo';
> 2 | typeof foo.bar === "undefined"
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | import foo from 'foo';
  2 | foo.bar === undefined

`;

exports[`no-typeof-undefined > invalid(18): foo\ntypeof [] === \"undefined\"; 1`] = `

  1 | foo
  2 | typeof [] === "undefined";

`;

exports[`no-typeof-undefined > invalid(18): foo\ntypeof [] === \"undefined\"; 2`] = `

Message:
  1 | foo
> 2 | typeof [] === "undefined";
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | foo
  2 | ;[] === undefined;

`;

exports[`no-typeof-undefined > invalid(19): foo\ntypeof (a ? b : c) === \"undefined\"; 1`] = `

  1 | foo
  2 | typeof (a ? b : c) === "undefined";

`;

exports[`no-typeof-undefined > invalid(19): foo\ntypeof (a ? b : c) === \"undefined\"; 2`] = `

Message:
  1 | foo
> 2 | typeof (a ? b : c) === "undefined";
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | foo
  2 | ;(a ? b : c) === undefined;

`;

exports[`no-typeof-undefined > invalid(2): declare var foo: unknown; var foo: unknown; typeof foo === \"undefined\"; 1`] = `

  1 | declare var foo: unknown; var foo: unknown; typeof foo === "undefined";

`;

exports[`no-typeof-undefined > invalid(2): declare var foo: unknown; var foo: unknown; typeof foo === \"undefined\"; 2`] = `

Message:
> 1 | declare var foo: unknown; var foo: unknown; typeof foo === "undefined";
    |                                             ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | declare var foo: unknown; var foo: unknown; foo === undefined;

`;

exports[`no-typeof-undefined > invalid(2): typeof Array !== \"undefined\" 1`] = `

Options:
- checkGlobalVariables: true

Code:
  1 | typeof Array !== "undefined"

`;

exports[`no-typeof-undefined > invalid(2): typeof Array !== \"undefined\" 2`] = `

Message:
> 1 | typeof Array !== "undefined"
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Suggestion 1/1: Switch to \`… !== undefined\`.:
  1 | Array !== undefined

`;

exports[`no-typeof-undefined > invalid(2): typeof a.b !== \"undefined\" 1`] = `

  1 | typeof a.b !== "undefined"

`;

exports[`no-typeof-undefined > invalid(2): typeof a.b !== \"undefined\" 2`] = `

Message:
> 1 | typeof a.b !== "undefined"
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | a.b !== undefined

`;

exports[`no-typeof-undefined > invalid(20): function a() {\n\treturn typeof // comment\n\t\ta.b === 'undefined';\n} 1`] = `

  1 | function a() {
  2 | 	return typeof // comment
  3 | 		a.b === 'undefined';
  4 | }

`;

exports[`no-typeof-undefined > invalid(20): function a() {\n\treturn typeof // comment\n\t\ta.b === 'undefined';\n} 2`] = `

Message:
  1 | function a() {
> 2 | 	return typeof // comment
    | 	       ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.
  3 | 		a.b === 'undefined';
  4 | }

Output:
  1 | function a() {
  2 | 	return ( // comment
  3 | 		a.b === undefined);
  4 | }

`;

exports[`no-typeof-undefined > invalid(21): function a() {\n\treturn (typeof // ReturnStatement argument is parenthesized\n\t\ta.b === 'undefined');\n} 1`] = `

  1 | function a() {
  2 | 	return (typeof // ReturnStatement argument is parenthesized
  3 | 		a.b === 'undefined');
  4 | }

`;

exports[`no-typeof-undefined > invalid(21): function a() {\n\treturn (typeof // ReturnStatement argument is parenthesized\n\t\ta.b === 'undefined');\n} 2`] = `

Message:
  1 | function a() {
> 2 | 	return (typeof // ReturnStatement argument is parenthesized
    | 	        ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.
  3 | 		a.b === 'undefined');
  4 | }

Output:
  1 | function a() {
  2 | 	return (// ReturnStatement argument is parenthesized
  3 | 		a.b === undefined);
  4 | }

`;

exports[`no-typeof-undefined > invalid(22): function a() {\n\treturn (typeof // UnaryExpression is parenthesized\n\t\ta.b) === 'undefined';\n} 1`] = `

  1 | function a() {
  2 | 	return (typeof // UnaryExpression is parenthesized
  3 | 		a.b) === 'undefined';
  4 | }

`;

exports[`no-typeof-undefined > invalid(22): function a() {\n\treturn (typeof // UnaryExpression is parenthesized\n\t\ta.b) === 'undefined';\n} 2`] = `

Message:
  1 | function a() {
> 2 | 	return (typeof // UnaryExpression is parenthesized
    | 	        ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.
  3 | 		a.b) === 'undefined';
  4 | }

Output:
  1 | function a() {
  2 | 	return (// UnaryExpression is parenthesized
  3 | 		a.b) === undefined;
  4 | }

`;

exports[`no-typeof-undefined > invalid(23): function parse(value) {\n\tswitch (typeof value === 'undefined') {}\n} 1`] = `

  1 | function parse(value) {
  2 | 	switch (typeof value === 'undefined') {}
  3 | }

`;

exports[`no-typeof-undefined > invalid(23): function parse(value) {\n\tswitch (typeof value === 'undefined') {}\n} 2`] = `

Message:
  1 | function parse(value) {
> 2 | 	switch (typeof value === 'undefined') {}
    | 	        ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.
  3 | }

Output:
  1 | function parse(value) {
  2 | 	switch (value === undefined) {}
  3 | }

`;

exports[`no-typeof-undefined > invalid(3): function parse() {\n\tswitch (typeof value === 'undefined') {}\n} 1`] = `

Options:
- checkGlobalVariables: true

Code:
  1 | function parse() {
  2 | 	switch (typeof value === 'undefined') {}
  3 | }

`;

exports[`no-typeof-undefined > invalid(3): function parse() {\n\tswitch (typeof value === 'undefined') {}\n} 2`] = `

Message:
  1 | function parse() {
> 2 | 	switch (typeof value === 'undefined') {}
    | 	        ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.
  3 | }

Suggestion 1/1: Switch to \`… === undefined\`.:
  1 | function parse() {
  2 | 	switch (value === undefined) {}
  3 | }

`;

exports[`no-typeof-undefined > invalid(3): interface Foo {} const Foo = 1; typeof Foo === \"undefined\"; 1`] = `

  1 | interface Foo {} const Foo = 1; typeof Foo === "undefined";

`;

exports[`no-typeof-undefined > invalid(3): interface Foo {} const Foo = 1; typeof Foo === \"undefined\"; 2`] = `

Message:
> 1 | interface Foo {} const Foo = 1; typeof Foo === "undefined";
    |                                 ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | interface Foo {} const Foo = 1; Foo === undefined;

`;

exports[`no-typeof-undefined > invalid(3): typeof a.b == \"undefined\" 1`] = `

  1 | typeof a.b == "undefined"

`;

exports[`no-typeof-undefined > invalid(3): typeof a.b == \"undefined\" 2`] = `

Message:
> 1 | typeof a.b == "undefined"
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | a.b === undefined

`;

exports[`no-typeof-undefined > invalid(4): /* globals value: readonly */\nfunction parse() {\n\tswitch (typeof value === 'undefined') {}\n} 1`] = `

Options:
- checkGlobalVariables: true

Code:
  1 | /* globals value: readonly */
  2 | function parse() {
  3 | 	switch (typeof value === 'undefined') {}
  4 | }

`;

exports[`no-typeof-undefined > invalid(4): /* globals value: readonly */\nfunction parse() {\n\tswitch (typeof value === 'undefined') {}\n} 2`] = `

Message:
  1 | /* globals value: readonly */
  2 | function parse() {
> 3 | 	switch (typeof value === 'undefined') {}
    | 	        ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.
  4 | }

Suggestion 1/1: Switch to \`… === undefined\`.:
  1 | /* globals value: readonly */
  2 | function parse() {
  3 | 	switch (value === undefined) {}
  4 | }

`;

exports[`no-typeof-undefined > invalid(4): import foo from \"foo\"; typeof foo === \"undefined\"; 1`] = `

  1 | import foo from "foo"; typeof foo === "undefined";

`;

exports[`no-typeof-undefined > invalid(4): import foo from \"foo\"; typeof foo === \"undefined\"; 2`] = `

Message:
> 1 | import foo from "foo"; typeof foo === "undefined";
    |                        ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | import foo from "foo"; foo === undefined;

`;

exports[`no-typeof-undefined > invalid(4): typeof a.b != \"undefined\" 1`] = `

  1 | typeof a.b != "undefined"

`;

exports[`no-typeof-undefined > invalid(4): typeof a.b != \"undefined\" 2`] = `

Message:
> 1 | typeof a.b != "undefined"
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | a.b !== undefined

`;

exports[`no-typeof-undefined > invalid(5): declare const foo: {bar?: string}; typeof foo.bar === \"undefined\"; 1`] = `

  1 | declare const foo: {bar?: string}; typeof foo.bar === "undefined";

`;

exports[`no-typeof-undefined > invalid(5): declare const foo: {bar?: string}; typeof foo.bar === \"undefined\"; 2`] = `

Message:
> 1 | declare const foo: {bar?: string}; typeof foo.bar === "undefined";
    |                                    ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | declare const foo: {bar?: string}; foo.bar === undefined;

`;

exports[`no-typeof-undefined > invalid(5): typeof a.b == 'undefined' 1`] = `

  1 | typeof a.b == 'undefined'

`;

exports[`no-typeof-undefined > invalid(5): typeof a.b == 'undefined' 2`] = `

Message:
> 1 | typeof a.b == 'undefined'
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | a.b === undefined

`;

exports[`no-typeof-undefined > invalid(6): let foo; typeof foo === \"undefined\" 1`] = `

  1 | let foo; typeof foo === "undefined"

`;

exports[`no-typeof-undefined > invalid(6): let foo; typeof foo === \"undefined\" 2`] = `

Message:
> 1 | let foo; typeof foo === "undefined"
    |          ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | let foo; foo === undefined

`;

exports[`no-typeof-undefined > invalid(6): typeof (undefinedVariableIdentifier as unknown) === \"undefined\"; 1`] = `

Options:
- checkGlobalVariables: true

Code:
  1 | typeof (undefinedVariableIdentifier as unknown) === "undefined";

`;

exports[`no-typeof-undefined > invalid(6): typeof (undefinedVariableIdentifier as unknown) === \"undefined\"; 2`] = `

Message:
> 1 | typeof (undefinedVariableIdentifier as unknown) === "undefined";
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Suggestion 1/1: Switch to \`… === undefined\`.:
  1 | (undefinedVariableIdentifier as unknown) === undefined;

`;

exports[`no-typeof-undefined > invalid(7): const foo = 1; typeof foo === \"undefined\" 1`] = `

  1 | const foo = 1; typeof foo === "undefined"

`;

exports[`no-typeof-undefined > invalid(7): const foo = 1; typeof foo === \"undefined\" 2`] = `

Message:
> 1 | const foo = 1; typeof foo === "undefined"
    |                ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | const foo = 1; foo === undefined

`;

exports[`no-typeof-undefined > invalid(7): typeof undefinedVariableIdentifier<string> === \"undefined\"; 1`] = `

Options:
- checkGlobalVariables: true

Code:
  1 | typeof undefinedVariableIdentifier<string> === "undefined";

`;

exports[`no-typeof-undefined > invalid(7): typeof undefinedVariableIdentifier<string> === \"undefined\"; 2`] = `

Message:
> 1 | typeof undefinedVariableIdentifier<string> === "undefined";
    | ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Suggestion 1/1: Switch to \`… === undefined\`.:
  1 | undefinedVariableIdentifier<string> === undefined;

`;

exports[`no-typeof-undefined > invalid(8): function bar() {\n\tinterface missing {}\n\treturn typeof missing === \"undefined\";\n} 1`] = `

Options:
- checkGlobalVariables: true

Code:
  1 | function bar() {
  2 | 	interface missing {}
  3 | 	return typeof missing === "undefined";
  4 | }

`;

exports[`no-typeof-undefined > invalid(8): function bar() {\n\tinterface missing {}\n\treturn typeof missing === \"undefined\";\n} 2`] = `

Message:
  1 | function bar() {
  2 | 	interface missing {}
> 3 | 	return typeof missing === "undefined";
    | 	       ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.
  4 | }

Suggestion 1/1: Switch to \`… === undefined\`.:
  1 | function bar() {
  2 | 	interface missing {}
  3 | 	return missing === undefined;
  4 | }

`;

exports[`no-typeof-undefined > invalid(8): var foo; typeof foo === \"undefined\" 1`] = `

  1 | var foo; typeof foo === "undefined"

`;

exports[`no-typeof-undefined > invalid(8): var foo; typeof foo === \"undefined\" 2`] = `

Message:
> 1 | var foo; typeof foo === "undefined"
    |          ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | var foo; foo === undefined

`;

exports[`no-typeof-undefined > invalid(9): var foo; var foo; typeof foo === \"undefined\" 1`] = `

  1 | var foo; var foo; typeof foo === "undefined"

`;

exports[`no-typeof-undefined > invalid(9): var foo; var foo; typeof foo === \"undefined\" 2`] = `

Message:
> 1 | var foo; var foo; typeof foo === "undefined"
    |                   ^^^^^^ Compare with \`undefined\` directly instead of using \`typeof\`.

Output:
  1 | var foo; var foo; foo === undefined

`;
